<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HCC Connect</string>
    <string name="hcc">Houston Community College</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Financials</string>
    <string name="title_section3">Schedule</string>
    <string name="title_section4">Academics</string>
    <string name="title_section5">Enrollment</string>
    <string name="title_section6">My Information</string>
    <string name="title_section7">My Widgets</string>
    <string name="title_section8">EGLS3</string>
    <string name="title_section9">About</string>
    <string name="login_out">Login/Logout</string>
    <string name="title_section11">Course Catalog</string>
    <string name="title_section12">Class Search</string>
    <string name="title_section13">Campus Map</string>
    <string name="title_section14">News</string>
    <string name="title_section15">Library</string>
    <string name="title_section16">Calendar</string>
    <string name="title_section17">Full Site</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Insert</string>
    <string name="autofil_login">Autofill Login credentials</string>
    <string name="autofil_summary">Do you want your login credential to be autofilled ?</string>
    <string name="username_summary">Enter username</string>
    <string name="pref_enter_username_title">Username</string>
    <string name="password_summary">Enter Password</string>
    <string name="pref_enter_password_title">Password</string>
    <string name="noInternet">Can\'t connect to the internet</string>
    <string name="tryAgain">Try Again</string>
    <string name="no_email_client">No email client found</string>
    <string name="Htowncc">Houston Community College</string>
    <string name="welcome">Welcome</string>
    <string name="public_links">Public Links</string>
    <string name="version">Version %1$s</string>
    <string name="copyright_text">Jake Ibee Massa. Copyright ©%1$d</string>
    <string name="disclaimer">\n
        This is not the official HCC app.\n
        The content found in this app is fully and only own by HCC.\n
        The sole purpose of this app is to provide a User friendly access to the HCC mobile site.\n
        This app only communicates with the HCC website and no other one.\n
        No data from your account or saved password is sent to another location.
    </string>
    <string name="app_disclaimer">App disclaimer</string>

</resources>
