<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_autofill"
        android:title="@string/autofil_login"
        android:summary="@string/autofil_summary"
        android:defaultValue="true"/>

    <EditTextPreference
        android:key="pref_key_username"
        android:summary="@string/username_summary"
        android:title="@string/pref_enter_username_title"
        android:inputType="text"
        android:dependency="pref_autofill"/>

    <EditTextPreference
        android:key="pref_key_password"
        android:summary="@string/password_summary"
        android:inputType="textPassword"
        android:title="@string/pref_enter_password_title"
        android:dependency="pref_autofill"/>


</PreferenceScreen>