<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="10dp"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/disclaimer"/>


    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="@color/white"
        android:text="@string/version"/>
    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/copyright_text"/>

</LinearLayout>